# django_ecommerce

./: .gitignore  README.md  README.rst  conftest.py  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  scripts.txt  settings.toml
ecommerce/: settings.py  urls.py
ecommerce/dashboard/fixtures/: db_admin_fixture.json
ecommerce/dashboard/tests/: test_selenium_dashboard.py
ecommerce/demo/: urls.py  views.py
ecommerce/demo/management/commands/: load-fixtures.py
ecommerce/demo/templates/: base.html  categories.html  product_by_category.html  product_detail.html
ecommerce/inventory/: models.py
ecommerce/inventory/migrations/: 0001_initial.py
ecommerce/inventory/tests/: test_db_fixtures.py
ecommerce/tests/: factories.py  fixtures.py  selenium.py
