[tool.poetry]
name = "ecommerce_django"
version = "0.1.0"
description = ""
authors = ["Fernando Florencio <nandoflorencio13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.8"
django-mptt = "^0.13.4"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-factoryboy = "2.1.0"
pytest-django = "4.4.0"
pytest-selenium = "2.0.1"
webdriver-manager = "^3.8.2"
factory-boy = "3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "selenium",
]
